--- a/back-e-commerce-app/services/config-server/src/main/resources/configurations/notification-service.yml
+++ b/back-e-commerce-app/services/config-server/src/main/resources/configurations/notification-service.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: ${MONGODB_URI}
+      uri: ${MONGODB_URI_NOTIFICATION}
   kafka:
     consumer:
       bootstrap-servers: localhost:9092
