--- a/back-e-commerce-app/services/config-server/src/main/resources/configurations/order-service.yml
+++ b/back-e-commerce-app/services/config-server/src/main/resources/configurations/order-service.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${MYSQL_URI}
+    url: ${MYSQL_URI_ORDER}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
   jpa:
